Use json file instead of json string to authenticate Google

--- a/NFLPool.Api/appsettings.Development.json
+++ b/NFLPool.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Google": {
+    "JsonCredentialsPath": "/home/cygnus/temp/nflpool-auth.json"
   }
 }
