--- a/NFLPool.Api/appsettings.json
+++ b/NFLPool.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Google": {
+    "JsonCredentialsPath": "/misc/nflpool-auth.json"
+  }
 }
