--- a/NFLPool.Api/appsettings.json
+++ b/NFLPool.Api/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "Google": {
     "JsonCredentialsPath": "/misc/nflpool-auth.json"
+  },
+  "Couchbase": {
+    "CouchbaseIp": "couchbase://localhost",
+    "UserName": "admin",
+    "Password": "admin"
   }
 }
