--- a/NFLPool.Service/NFLPool.Service.csproj
+++ b/NFLPool.Service/NFLPool.Service.csproj
@@ -6,6 +6,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="CouchbaseNetClient" Version="3.4.11"/>
         <PackageReference Include="Google.Apis" Version="1.62.0"/>
         <PackageReference Include="Google.Apis.Auth" Version="1.62.0"/>
         <PackageReference Include="Google.Apis.Drive.v3" Version="1.62.0.3155"/>
