--- a/NFLPool.Api/NFLPool.Api.csproj
+++ b/NFLPool.Api/NFLPool.Api.csproj
@@ -17,4 +17,13 @@
         <ProjectReference Include="..\NFLPool.Service\NFLPool.Service.csproj"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Content Update="appsettings.Development.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
 </Project>
