--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+			<version>2.17.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.couchbase.client</groupId>
+			<artifactId>java-client</artifactId>
+			<version>3.6.3</version>
 		</dependency>
 	</dependencies>
 
