Add basic auth to API

--- a/compose.yml
+++ b/compose.yml
@@ -4,7 +4,7 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: 192.168.40.0/25
+        - subnet: 192.168.80.0/25
 
 services:
   pooldb:
@@ -12,39 +12,39 @@ services:
     image: couchbase:community-7.2.1
     networks:
       nfl_pool_proxy:
-        ipv4_address: 192.168.40.100
+        ipv4_address: 192.168.80.100
     hostname: pooldb
     ports:
       - "8091-8096:8091-8096"
       - "11207-11211:11207-11211"
     volumes:
-      - /mnt/couchbase:/opt/couchbase/var
-#  poolapi:
-#    container_name: nflpoolapi
-#    build:
-#      context: .
-#      dockerfile: Dockerfile
-#    volumes:
-#      - /home/cygnus/temp:/misc
-#    networks:
-#      nfl_pool_proxy:
-#        ipv4_address: 192.168.40.101
-#    hostname: poolapi
-#    ports:
-#      - 8080:8080
-#    depends_on:
-#      - pooldb
-#
-#  poolsite:
-#    container_name: nflpoolsite
-#    build:
-#      context: ./nflpoolsite
-#      dockerfile: Dockerfile
-#    networks:
-#      nfl_pool_proxy:
-#        ipv4_address: 192.168.40.102
-#    hostname: poolsite
-#    ports:
-#      - 4000:4000
-#    depends_on:
-#      - poolapi
+      - /mnt/ssd/docker/appdata/couchbase:/opt/couchbase/var
+  poolapi:
+    container_name: nflpoolapi
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - /home/cygnus/temp:/misc
+    networks:
+      nfl_pool_proxy:
+        ipv4_address: 192.168.80.101
+    hostname: poolapi
+    ports:
+      - 8083:8080
+    depends_on:
+      - pooldb
+
+  poolsite:
+    container_name: nflpoolsite
+    build:
+      context: ./nflpoolsite
+      dockerfile: Dockerfile
+    networks:
+      nfl_pool_proxy:
+        ipv4_address: 192.168.80.102
+    hostname: poolsite
+    ports:
+      - 4000:4000
+    depends_on:
+      - poolapi
