--- a/nflpoolapi/pom.xml
+++ b/nflpoolapi/pom.xml
@@ -8,9 +8,9 @@
 		<version>3.3.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.effisfot</groupId>
-	<artifactId>nflpool</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<groupId>com.effisoft.nflpool</groupId>
+	<artifactId>api</artifactId>
+	<version>1.0.0</version>
 	<name>NFLPool</name>
 	<description>Online results for NFL Pool</description>
 	<url/>
@@ -70,6 +70,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>3.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>com.effisoft.nflpool</groupId>
+			<artifactId>common</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 	<build>
